@@ -24,8 +24,20 @@ public class NexuLauncherApp {
 	public static void main(String[] args) throws Exception {
 		
 		List<String> list = new ArrayList<String>(args!=null ? Arrays.asList(args) : new ArrayList<String>());
-		list.add("javafx.preloader=lu.nowina.nexu.NexUPreLoader");
-		list.add("glass.accessible.force=false");
+		
+		list.add("--add-modules");
+		list.add("jdk.crypto.cryptoki,javafx.controls,javafx.fxml,javafx.swing,java.xml.bind,java.smartcardio");
+		
+		list.add("--add-exports");
+		list.add("jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED");		
+								
+		list.add("--add-opens");
+		list.add("jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED");
+		
+		list.add("javafx.preloader");
+		list.add("lu.nowina.nexu.NexUPreLoader");
+		list.add("glass.accessible.force");
+		list.add("false");
 		
 		args = new String[list.size()];
 		list.toArray(args);
